--- a/mvc course work/Content/bootstrap.css
+++ b/mvc course work/Content/bootstrap.css
@@ -58,7 +58,8 @@ html {
 }
 
 body {
-    margin-left:5%;
+background:url(/Images/MainWallpapper.jpg);
+        margin-left:5%;
     margin-right:5%;
 }
 
