--- a/mvc course work/Views/Race/About.cshtml
+++ b/mvc course work/Views/Race/About.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = "Sent";
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -10,8 +6,12 @@
     <title></title>
 </head>
 <body>
-    <div>
-        <h2>Your message has been sent</h2>
+    <div class="drivers-in-race">
+     <div>
+         <div>
+
+         </div>
+     </div>
     </div>
 </body>
 </html>
