--- a/mvc course work/Views/Contacts/Index.cshtml
+++ b/mvc course work/Views/Contacts/Index.cshtml
@@ -18,7 +18,7 @@
                     validating: 'glyphicon glyphicon-refresh'
                 },
                 fields: {
-                    first_name: {
+                    FirstName: {
                         validators: {
                             stringLength: {
                                 min: 4,
@@ -28,7 +28,7 @@
                             }
                         }
                     },
-                    last_name: {
+                    LastName: {
                         validators: {
                             stringLength: {
                                 min: 4,
@@ -64,7 +64,7 @@
                             },
                         }
                     },
-                    comment: {
+                    Description: {
                         validators: {
                             stringLength: {
                                 min: 10,
@@ -102,27 +102,23 @@
 <body>
 
     <div class="container">
-        <form class="well form-horizontal" action=" " style="margin-top:11%" ; method="post" id="contact_form">
-            <!-- <fieldset><fieldset> -->
-            <!-- Form Name -->
+        <form class="well form-horizontal" action="/Contacts/Sent" style="margin-top:11%" ; method="post" id="contact_form">
             <legend>Contact Us Today!</legend>
-            <!-- Text input-->
             <div class="form-group">
                 <label class="col-md-4 control-label">First Name</label>
                 <div class="col-md-4 inputGroupContainer">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input name="first_name" placeholder="First Name" class="form-control" type="text">
+                        <input name="FirstName" placeholder="First Name" class="form-control" type="text">
                     </div>
                 </div>
             </div>
-            <!-- Text input-->
             <div class="form-group">
                 <label class="col-md-4 control-label">Last Name</label>
                 <div class="col-md-4 inputGroupContainer">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input name="last_name" placeholder="Last Name" class="form-control" type="text">
+                        <input name="LastName" placeholder="Last Name" class="form-control" type="text">
                     </div>
                 </div>
             </div>
@@ -136,7 +132,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- Text input-->
             <div class="form-group">
                 <label class="col-md-4 control-label">Phone #</label>
@@ -148,7 +143,6 @@
                 </div>
             </div>
             <!-- Text input-->
-
             <div class="form-group">
                 <label class="col-md-4 control-label">Address</label>
                 <div class="col-md-4 inputGroupContainer">
@@ -164,7 +158,7 @@
                 <div class="col-md-4 inputGroupContainer">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-                        <textarea class="form-control" name="comment" placeholder="Project Description"></textarea>
+                        <textarea class="form-control" name="Description" placeholder="Project Description"></textarea>
                     </div>
                 </div>
             </div>
@@ -174,24 +168,7 @@
             <div class="form-group">
                 <label class="col-md-4 control-label"></label>
                 <div class="col-md-4">
-                    <script>
-                        var btnOnClick = function () {
-                            @{
-                                Model.sendMessage();
-                             }
-                            //var firstName = document.getElementsByName("first_name")[0].value;
-                            //var secondName = document.getElementsByName("last_name")[0].value;
-                            //var email = document.getElementsByName('email')[0].value;
-                            //var phine = document.getElementsByName('phone')[0].value;
-                            //var address = document.getElementsByName('address')[0].value;
-                            //var comment = document.getElementsByName('comment')[0].value;
-                            //console.log(str);
-                        }
-
-                    </script>
-
-                    <button type="submit" class="btn btn-warning"
-                            onclick="btnOnClick">
+                    <button type="submit" class="btn btn-warning">
                         Send
                         <span class="glyphicon glyphicon-send"></span>
                     </button>
