--- a/mvc course work/Views/Contacts/Index.cshtml
+++ b/mvc course work/Views/Contacts/Index.cshtml
@@ -122,7 +122,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Text input-->
             <div class="form-group">
                 <label class="col-md-4 control-label">E-Mail</label>
                 <div class="col-md-4 inputGroupContainer">
@@ -132,7 +131,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Text input-->
             <div class="form-group">
                 <label class="col-md-4 control-label">Phone #</label>
                 <div class="col-md-4 inputGroupContainer">
@@ -142,7 +140,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Text input-->
             <div class="form-group">
                 <label class="col-md-4 control-label">Address</label>
                 <div class="col-md-4 inputGroupContainer">
@@ -152,7 +149,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Text input-->
             <div class="form-group">
                 <label class="col-md-4 control-label">Project Description</label>
                 <div class="col-md-4 inputGroupContainer">
@@ -162,9 +158,11 @@
                     </div>
                 </div>
             </div>
-            <!-- Success message -->
-            <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
-            <!-- Button -->
+            <div class="alert alert-success" role="alert" id="success_message">
+                Success 
+            <i class="glyphicon glyphicon-thumbs-up">
+                </i> Thanks for contacting us, we will get back to you shortly.
+            </div>
             <div class="form-group">
                 <label class="col-md-4 control-label"></label>
                 <div class="col-md-4">
@@ -176,6 +174,5 @@
             </div>
         </form>
     </div>
-    <!-- /.container -->
 </body>
 </html>
