--- a/mvc course work/Views/Driver/Index.cshtml
+++ b/mvc course work/Views/Driver/Index.cshtml
@@ -38,7 +38,7 @@
             <tr>
                 <td>Family name</td>
                 <td>
-                  
+
                     @Model.familyName
                 </td>
             </tr>
@@ -70,8 +70,6 @@
     </div>
     <p style="font-family:Tahoma; font-size:20px;">@Model.shortBiography</p>
     <div id="columnchart_material" style="width: 900px; height: 500px; margin-left:auto; margin-right:auto"></div>
-
-    <iframe class="youtube-player" type="text/html" width="780" height="385" style="margin-left:10px" src="https://www.youtube.com/embed/49LNI2S8gMA" frameborder="0"></iframe>
-    <iframe class="youtube-player" type="text/html" width="780" height="385" style="vertical-align:central" src="https://www.youtube.com/embed/DhmqADtaC_o" frameborder="0"></iframe> }
+    <iframe class="youtube-player" align="middle" width="470" height="600" type="text/html" src="https://www.youtube.com/embed/49LNI2S8gMA" frameborder="0"></iframe>
 </body>
 </html>
