--- a/mvc course work/Content/teamIndex.css
+++ b/mvc course work/Content/teamIndex.css
@@ -4,28 +4,28 @@
 }
 
 .content {
-    background-color: #FFFFFF;
-    padding: 25px;
-    margin: 10px;
     display: compact;
+    padding: 15px;
 }
 
-    .content h2 {
+    .content .info h2 {
         font-weight: 700;
     }
 
     .content .team-info-table {
         font-size: medium;
         margin-left: 15px;
-        width: 70%;
+        width: 80%;
     }
-
 
         .content .team-info-table tr {
             width: 100%;
+            border-bottom: 3px solid rgba(88, 87, 87, 0.10);
         }
 
             .content .team-info-table tr td:first-child {
+
+                font-size:larger;
             }
 
             .content .team-info-table tr td:last-child {
@@ -33,5 +33,120 @@
             }
 
             .content .team-info-table tr td {
-                width: 50%;
+                width: 70%;
             }
+
+.drivers .blck {
+    clear: both;
+    display: inline-block;
+    width: 49%;
+    height: auto;
+    vertical-align: top;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.content .drivers {
+    display: inline-block;
+    clear: both;
+    text-align: center;
+    width: 45%;
+}
+
+.drivers ul {
+    width: 100%;
+}
+
+.blck .image {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+    .blck .image img {
+        -moz-transition: all 1s ease-out;
+        -o-transition: all 1s ease-out;
+        -webkit-transition: all 1s ease-out;
+    }
+
+.blck:hover .image img {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
+.blck img {
+    height: 100%;
+    width: 100%;
+}
+
+.blck {
+    margin-top: 20px;
+}
+
+    .blck a {
+        font-size: large;
+        font-family: fantasy;
+        color: #000;
+    }
+
+    .blck .text {
+        font-size: large;
+        font-family: fantasy;
+        color: #000;
+    }
+
+        .blck .text a {
+            font-size: large;
+            font-family: fantasy;
+            color: #000;
+        }
+
+    .blck:hover .text a {
+        transition-property: margin-top,color;
+        margin-top: 0px;
+        color: #fff;
+        transition-duration: 0.5s;
+    }
+
+    .blck:hover .text a {
+        transition-property: color;
+        margin-top: 0px;
+        color: #fff;
+        transition-duration: 0.5s;
+    }
+
+    .blck:hover .text {
+        transition-property: background;
+        transition-duration: 0.5s;
+        background: #000;
+    }
+
+        .blck:hover .text p {
+            transition-property: margin-top,color;
+            margin-top: 0px;
+            color: #fff;
+            transition-duration: 0.5s;
+        }
+
+    .blck .text .id {
+        opacity: 0.0;
+        color: #fff;
+    }
+
+    .blck:hover .text .id {
+        transition-property: opacity,color;
+        opacity: 1;
+        color: #fff;
+        transition-duration: 0.5s;
+    }
+
+
+.content .info {
+    vertical-align: top;
+    width: 45%;
+    display: inline-block;
+}
